# python-commander

./: .gitignore  LICENSE  README.md  analyze_app_size.sh  build_app.sh  create_iconset.sh  pyproject.toml  requirements.txt  script-template.py
example-scripts/basic/: hello-world.py
example-scripts/macos-development/: png_to_icns.py
python_commander/: __init__.py  config.py  main.py
resources/: default_config.json
resources/images/icon/: iconset.icns
